Fix padding and align elements

--- a/public_html/css/homeStyles.css
+++ b/public_html/css/homeStyles.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
-
-body {
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
+@import url(https://fonts.googleapis.com/css?family=Rock+Salt);
+#intro {
     background: url(../images/flag.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -12,11 +12,19 @@ h1 {
     color: white;
     margin: 0px;
     font-size: 40px;
-font-family: 'Press Start 2P', cursive;
+    font-family: 'Rock Salt', cursive;
+    letter-spacing: 10px;
+}
+
+.subtitle {
+    color: white;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 15px;
+    margin-top: 0px;
 }
 
 #portrait {
-    margin-top: 10vh;
+    margin-top: 5vh;
     border-radius: 50%;
     width: 250px;
     height: 250px;
@@ -28,9 +36,12 @@ li {
     display: inline-block;
 }
 
+.contactLinks {
+    padding: 0px;
+}
+
 .contactLinks a {
     text-decoration: none;
-    line-height: 1vh;
 }
 
 /* Circled Font Awesome icons */
@@ -43,8 +54,8 @@ i.custom-icon {
     color: white;
     border: 1px solid white;
     border-radius: 50%;
-    margin: 1vh;
-    padding: 2vh;
+    margin: 1vw;
+    padding: 2vw;
     text-align: center;
     vertical-align: middle;
 }
